--- a/adc_to_dac_example/MDK-ARM/adc_to_dac_example/adc_to_dac_example.build_log.htm
+++ b/adc_to_dac_example/MDK-ARM/adc_to_dac_example/adc_to_dac_example.build_log.htm
@@ -43,13 +43,8 @@ linking...
 Program Size: Code=3806 RO-data=358 RW-data=28 ZI-data=1028  
 FromELF: creating hex file...
 "adc_to_dac_example\adc_to_dac_example.axf" - 0 Error(s), 4 Warning(s).
-</pre>
-</body>
-</html>
-adc_to_dac_example.axf" 
+Load "adc_to_dac_example\\adc_to_dac_example.axf" 
 Erase Done.
 Programming Done.
 Verify OK.
 Application running ...
-eating hex file...
-"adc_to_dac_example\adc_to_dac_example.axf" - 0 Error(s), 5 Warning(s).
